--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <!-- ======= SWIPER CSS ======= -->
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
   <!-- ===== RESET CSS ====== -->
-  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="css/reset.css">
   <!-- ===== STYLE CSS ====== -->
-  <link rel="stylesheet" href="../css/stylePage1.css">
+  <link rel="stylesheet" href="css/stylePage1.css">
 </head>
 <body>
 <!-- ====== BTN-TO-TOP ====== -->
@@ -55,7 +55,7 @@
   <section class="home section" id="home">
     <div class="home__container bd-grid bd-container">
       <div class="home__img-container">
-        <img src="../assets/img_home.png" alt="" class="home__img">
+        <img src="assets/img_home.png" alt="" class="home__img">
       </div>
       <div class="home__content">
           <h1 class="home__content-title">Setup your Logo app account in <span class="home__content-color">No-Time</span></h1>
@@ -148,7 +148,7 @@
         </div>
 
         <div class="features__service-img-container">
-          <img class="features__service-img" src="../assets/img_services.png" alt="team work">
+          <img class="features__service-img" src="assets/img_services.png" alt="team work">
         </div>
       </div>
     </section>
@@ -405,12 +405,12 @@
 <!-- ======= SWIPER UNPKG ======= -->
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 <!-- ======= MY VARIABLE ======= -->
-<script type="module" src="../js/myVariables.js"></script>
+<script type="module" src="js/myVariables.js"></script>
 <!-- ======= MY VARIABLE ======= -->
-<script type="module" src="../js/myFunctions.js"></script>
+<script type="module" src="js/myFunctions.js"></script>
 <!-- ======= MY SWIPER ======= -->
-<script src="../js/swiper.js"></script>
+<script src="js/swiper.js"></script>
 <!-- ======= MY JS ======= -->
-<script type="module" src="../js/main.js"></script>
+<script type="module" src="js/main.js"></script>
 </body>
 </html>
