--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <!-- ======= SWIPER CSS ======= -->
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
   <!-- ===== RESET CSS ====== -->
-  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/reset2.css">
   <!-- ===== STYLE CSS ====== -->
-  <link rel="stylesheet" href="css/stylePage1.css">
+  <link rel="stylesheet" href="css/stylePage2.css">
 </head>
 <body>
 <!-- ====== BTN-TO-TOP ====== -->
